# roboestronic

./: README.md
devel/include/bt_follow/: FollowAction.h  FollowActionFeedback.h  FollowActionGoal.h  FollowActionResult.h  FollowFeedback.h  FollowGoal.h  FollowResult.h
devel/include/following/: FollowAction.h  FollowActionFeedback.h  FollowActionGoal.h  FollowActionResult.h  FollowFeedback.h  FollowGoal.h  FollowResult.h
devel/include/ur_vision_msgs/: BoundingBox2D.h  DetectedObject2D.h  DetectedObjectArray2D.h  TrackedObject2D.h  TrackedObjectArray2D.h
devel/lib/ld06_lidar/: ld06_lidar
devel/lib/leg_tracker/: detect_leg_clusters  extract_positive_training_clusters  local_occupancy_grid_mapping  train_leg_detector
devel/lib/pkgconfig/: bt_follow.pc  collison_avoidance.pc  detect_objects.pc  following.pc  ld06_lidar.pc  leg_tracker.pc  obstacle_avoidance.pc  people_msgs.pc  ur_object_tracking.pc  ur_vision_msgs.pc
devel/lib/python3/dist-packages/bt_follow/msg/: _FollowAction.py  _FollowActionFeedback.py  _FollowActionGoal.py  _FollowActionResult.py  _FollowFeedback.py  _FollowGoal.py  _FollowResult.py
devel/lib/python3/dist-packages/following/: __init__.py
devel/lib/python3/dist-packages/following/msg/: _FollowAction.py  _FollowActionFeedback.py  _FollowActionGoal.py  _FollowActionResult.py  _FollowFeedback.py  _FollowGoal.py  _FollowResult.py  __init__.py
devel/lib/python3/dist-packages/ur_vision_msgs/msg/: _BoundingBox2D.py  _DetectedObject2D.py  _DetectedObjectArray2D.py  _TrackedObject2D.py  _TrackedObjectArray2D.py  __init__.py
devel/share/bt_follow/cmake/: bt_follow-msg-extras.cmake  bt_follow-msg-paths.cmake  bt_followConfig.cmake
devel/share/bt_follow/msg/: FollowFeedback.msg  FollowGoal.msg
devel/share/collison_avoidance/cmake/: collison_avoidanceConfig.cmake
devel/share/common-lisp/ros/bt_follow/msg/: FollowAction.lisp  FollowActionFeedback.lisp  FollowActionGoal.lisp  FollowActionResult.lisp  FollowFeedback.lisp  FollowGoal.lisp  FollowResult.lisp  _package.lisp  _package_FollowAction.lisp  _package_FollowActionFeedback.lisp  _package_FollowActionGoal.lisp  _package_FollowGoal.lisp  (+4 more)
devel/share/detect_objects/cmake/: detect_objectsConfig.cmake
devel/share/following/cmake/: following-msg-extras.cmake  following-msg-paths.cmake  followingConfig.cmake
devel/share/following/msg/: FollowResult.msg
devel/share/ld06_lidar/cmake/: ld06_lidarConfig.cmake
devel/share/leg_tracker/cmake/: leg_tracker-msg-extras.cmake  leg_tracker-msg-paths.cmake  leg_trackerConfig.cmake
devel/share/obstacle_avoidance/cmake/: obstacle_avoidanceConfig.cmake
devel/share/people_msgs/cmake/: people_msgs-msg-paths.cmake  people_msgsConfig.cmake
devel/share/roseus/ros/bt_follow/: manifest.l
devel/share/roseus/ros/following/: manifest.l
devel/share/roseus/ros/leg_tracker/: manifest.l
devel/share/roseus/ros/ur_vision_msgs/: manifest.l
devel/share/ur_object_tracking/cmake/: ur_object_trackingConfig.cmake
devel/share/ur_vision_msgs/cmake/: ur_vision_msgs-msg-paths.cmake  ur_vision_msgsConfig.cmake
src/bt_follow/: CMakeLists.txt  README.md  package.xml
src/bt_follow/launch/: bt_follow.launch  bt_follow_all.launch  bt_follow_new.launch
src/bt_follow/scripts/: .follow.py.swp  bt_following.py  bt_pos_publisher.py  follow.py  test_client.py
src/detect_objects/: CMakeLists.txt  README.md
src/detect_objects/launch/: detect_objects.launch
src/detect_objects/model/: default_model.tflite  labels.txt  tracked_classes.txt
src/detect_objects/scripts/: detect_objects.py  detect_objects_node.py
src/following/: CMakeLists.txt
src/following/launch/: constant_follow_lidar.launch  constant_follow_rpi.launch  follow_me.launch
src/following/lidar_config/: angular_bounds.yaml
src/following/root3_image/: customize_root3_image.py
src/following/scripts/: follow (copy).py  follow.py  follow_client.py
src/following/src/following/: utils.py  utils2.py  utils3.py
src/ldlidar/launch/: ld06.launch
src/leg_tracker/scripts/: individual_leg_tracker.py
src/obstacle_avoidance/: CMakeLists.txt
src/obstacle_avoidance/scipts/: main.py
src/ur_object_tracking/: CMakeLists.txt  LICENSE  README.md  package.xml
src/ur_object_tracking/launch/: all_tracking.launch  all_tracking_no_cam.launch  tracking.launch
src/ur_object_tracking/scripts/: multiple_object_tracking.py  object_tracking_node.py  single_object_tracking.py  single_object_tracking2.py  single_object_tracking_node.py  sort.py
src/ur_vision_msgs/: CMakeLists.txt  package.xml
src/ur_vision_msgs/msg/: BoundingBox2D.msg  DetectedObject2D.msg  DetectedObjectArray2D.msg  TrackedObject2D.msg  TrackedObjectArray2D.msg
(+69 files in other folders)
