<?xml version="1.0"?>
<package>
  <name>bt_follow</name>
  <version>0.2.0</version>
  <description>The bluetooth follow package</description>
  <maintainer email="jl@ubiquityrobotics.org">Jan Lipovsek</maintainer>
  <license>BSD</license>


  <author>Jan Lipovsek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
