<?xml version="1.0"?>
<package format="2">
  <name>ur_vision_msgs</name>
  <version>0.0.1</version>
  <description>
	Ubiquity Robotics vision messages
  </description>

  <author email="jl@ubiquityrobotics.org">Jan Lipovšek</author>
  <maintainer email="jl@ubiquityrobotics.org">Jan Lipovšek</maintainer>
  
  <license>bsd</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
